2001-08-20  Akim Demaille  <akim@epita.fr>

	Autotest invokes M4sh's initialization.

	* lib/autotest/general.m4: Adjust the diversion names.
	(AT_INIT): Run AS_INIT.
	Use the BINSH diversion to invoke /bin/sh.
	* tests/base.at, tests/m4sh.at, tests/m4sugar.at, tests/tools.at:
	* tests/torture.at: Respect M4sugar and M4sh macro name spaces.

	
2001-08-20  Akim Demaille  <akim@epita.fr>

	Let M4sh have its own diversions.

	* lib/autoconf/general.m4 (_m4_divert(BINSH), _m4_divert(REVISION))
	(_m4_divert(NOTICE)): Rename as...
	* lib/m4sugar/m4msh.m4 (_m4_divert(BINSH), _m4_divert(HEADER-REVISION))
	(_m4_divert(HEADER-COMMENT)): these.
	(_m4_divert(HEADER-COPYRIGHT), _m4_divert(HEADER-COPYRIGHT)): New.
	(_m4_divert(NOTICE)): New, for Libtool.
	* lib/autoconf/general.m4 (_m4_divert(PREPARE)): Remove, replaced
	long ago with `_m4_divert(GROW)'.
	(AC_COPYRIGHT, AC_REVISION, _AC_INIT_NOTICE): Adjust.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* tests/base.at, tests/compile.at, tests/foreign.at,
	* tests/m4sh.at, tests/m4sugar.at, tests/mktests.sh,
	* tests/semantics.at, tests/suite.at, tests/tools.at,
	* tests/torture.at: Ask Autotest mode, not Autoconf mode.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (handle_output): Handle @__@.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4, lib/autoconf/oldnames.m4,
	* lib/autotest/general.m4: Adjust the license.

2001-08-17  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Function Portability): Mention snprintf,
	following up on a suggestion by Kevin Ryde.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* doc/install.texi, doc/autoconf.texi: Use `autoconf', not
	`autoconf_manual', as texinfo.tex 2001-06-21.10 chokes on it.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Refer to `$as_me.log', not
	`$0.log' as for projects where testsuite is in src, we'd have
	testsuite.log created in src.

2001-08-17  Akim Demaille  <akim@epita.fr>
