@@ -1,5 +1,12 @@
 2001-08-20  Akim Demaille  <akim@epita.fr>
 
+	* tests/base.at, tests/m4sh.at, tests/m4sugar.at,
+	* tests/semantics.at, tests/tools.at, tests/torture.at:
+	s/^AT_DATA\(([^][]+),/AT_DATA([$1],/.
+
+	
+2001-08-20  Akim Demaille  <akim@epita.fr>
+
 	Autotest invokes M4sh's initialization.
 
 	* lib/autotest/general.m4: Adjust the diversion names.
